# ---------git

./: .env.backup  .env.example  .gitignore  LOG.md  README.md  TODO.md  app.db  conftest.py  fix_db_models.py  pyproject.toml  requirements.txt  simple_pdf_test.py  test_pdf_export.py  test_report_service.html  test_report_service_only.py  test_report_service_pdf.py
.venv_new/: pyvenv.cfg
.venv_new/Scripts/: activate  activate.bat
.venv_test/: pyvenv.cfg
.venv_test/Scripts/: activate  activate.bat
backend/: __init__.py  alembic.ini  app.db  requirements.txt  test_app.py
backend/alembic/: env.py
backend/app/: __init__.py  config.py  main.py  utils.py
backend/reports/: report_20250706_194200.docx  report_20250706_194200.md  report_20250707_003855.docx  report_20250707_003855.md
backend/scripts/: debug_report_format.py  fix_encoding.py  fix_env_encoding.py  run_report_tests.py  run_server.py  run_tests.py  simple_test.py  test_api_reports.py  test_env.py  test_pdf_export.py  test_report_creation.py  test_report_fix.py
backend/tests/: __init__.py  (+9 more)
components/: README.md
docs/: README.md
frontend/: .eslintrc.js  README.md  package-lock.json  package.json  vue.config.js
reports/: report_20250706_171337.docx  report_20250706_171337.md  report_20250707_024946.html  report_20250710_001524.docx  report_20250710_001823.docx  report_20250710_002025.docx  report_20250710_002025.md  report_20250710_002637.docx
scripts/: debug_report_format.py  run_pdf_generation_test.py  verify_api.py
tests/: test_report_generation_pipeline.py  test_report_integration.py
(+80 files in other folders)
